deployment/payment-service/blue-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-blue
  namespace: payment-service
  labels:
    app: payment-service
    environment: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
      environment: blue
  template:
    metadata:
      labels:
        app: payment-service
        environment: blue
    spec:
      containers:
      - name: payment-service
        image: binamin/payment-service:latest
        ports:
        - containerPort: 6000
        resources:
          requests:
            memory: "128Mi"
            cpu: "20m"
          limits:
            memory: "256Mi"
            cpu: "50m"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /readiness
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
