deployment/payment-service/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-green
  namespace: payment-service
  labels:
    app: payment-service
    environment: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payment-service
      environment: green
  template:
    metadata:
      labels:
        app: payment-service
        environment: green
    spec:
      containers:
      - name: payment-service
        image: binamin/payment-service:latest
        ports:
        - containerPort: 6000
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /readiness
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
