deployment/payment-service/service.yaml
# Service to route traffic to either blue or green environment

apiVersion: v1
kind: Service
metadata:
  name: payment-s-service
  namespace: payment-service
spec:
  selector:
      app: payment-service
      environment: blue # initially routes to blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6000
