deployment/payment-service/ingress.yaml
# ingress to expose the application
#  Ingress resource that exposes the payment service to external traffic. 

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ingress
  namespace: payment-service
spec:
  rules:
  - host: payment-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: payment-s-service
            port:
              number: 80
